--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,11 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:support-vector-drawable:23.+'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:support-annotations:23.1.1'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.google.firebase:firebase-messaging:9.4.0'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.android.support:gridlayout-v7:23.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
